--- a/COPY-vite-project-COPY6/index.html
+++ b/COPY-vite-project-COPY6/index.html
@@ -11,4 +11,4 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
-This should not be the only thing showing
+Placeholder Text (This should not be the only thing showing)
